--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -6,6 +6,6 @@
 </div>
 <p></p>
 <div>
-If you have an account <a href="#">Sign In</a>
+If you have an account <a href="{% url 'sign_in' %}">Sign In</a>
 </div>
 </form>
