--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -6,6 +6,8 @@
 </div>
 <p></p>
 <div>
-If you have an account <a href="{% url 'sign_in' %}">Sign In</a>
+If you have an account <a href="{% url 'users:sign_in' %}">Sign In</a>
+
+
 </div>
 </form>
