--- a/hostel/templates/hostel/index.html
+++ b/hostel/templates/hostel/index.html
@@ -5,18 +5,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<!-- Sidebar -->
-<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
-  <h3 class="w3-bar-item">Home</h3>
-  <a href="admin/" class="w3-bar-item w3-button">Admin</a>
-  <a href="/signup" class="w3-bar-item w3-button">Sign up</a>
- 
-</div>
 
 <!-- Page Content -->
-<div style="margin-left:25%">
+<div>
 
-<div class="w3-container w3-teal">
+<div class="w3-container w3-teal ">
   <h1>Hostel Management</h1>
 </div>
 
@@ -35,28 +28,5 @@
   {% endfor %}
 
 </div>
-
-<div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
-    <h3 class="w3-center">Register for Enquiry</h3>
-    <hr>
-    <p></p>
-
-    <form action="/action_page.php" target="_blank">
-      <div class="w3-section">
-        <label>Name</label>
-        <input class="w3-input w3-border" type="text" required name="Name">
-      </div>
-      <div class="w3-section">
-        <label>Email</label>
-        <input class="w3-input w3-border" type="text" required name="Email">
-      </div>
-      
-      <button type="submit" class="w3-button w3-block w3-dark-grey">Register</button>
-    </form><br>
-    
-
-  </div>
-
-      
 </body>
 </html>
