--- a/users/templates/users/signin.html
+++ b/users/templates/users/signin.html
@@ -65,11 +65,6 @@ a {
   text-align: center;
 }
 
-.admin {
-  
-  text-align: center;
-}
-
 </style>
 </head>
 <body>
@@ -89,7 +84,7 @@ a {
     <hr>
     
     
-    <a type="submit" href="/index">Sign In</a>
+    <button type="submit"><a href="/index">Sign In</a></button>
 </div>
 <p></p>
 
