--- a/hostel/templates/hostel/index.html
+++ b/hostel/templates/hostel/index.html
@@ -6,11 +6,26 @@
 <body>
 
 
+
+
+
+
 <!-- Page Content -->
 <div>
 
-<div class="w3-container w3-teal ">
+<div class="w3-container w3-teal w3-center w3-margin-bottom">
   <h1>Hostel Management</h1>
+</div>
+
+<div class="w3-opacity">
+<span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
+<div class="w3-clear"></div>
+<header class="w3-center w3-margin-bottom">
+  <h1><b>Services</b></h1>
+  <p><b> Spacious Hostel Rooms</b></p>
+  <p><b> with Comfortable and Hygienic Environment</b></p>
+  
+</header>
 </div>
 
 <div class="w3-row-padding w3-margin-top">
