--- a/hostel/templates/hostel/base.html
+++ b/hostel/templates/hostel/base.html
@@ -76,7 +76,7 @@ a {
 <body>
 
 
-<form action="/action_page.php" method="POST">
+<form  method="POST">
   <div class="container">
   	<h1> Welcome to the Hostel Management Portal</h1>
     
@@ -86,17 +86,17 @@ a {
   	
   	
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+    <input type="text" placeholder="Enter Email" name="email" id="email" required >
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" id="psw" required >
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required >
     <hr>
     
     <div. class="container registerbtn">
-    <a type="submit" class="registerbtn" href="hostel/index"> Register</a>
+    <button type="submit" class="registerbtn" > <a href="/index" style = "color:white">Register</a></button>
     </div>
     <div class="container admin">
     <a class="registerbtn" href="/admin">Admin</a>
