--- a/hostel/templates/hostel/index.html
+++ b/hostel/templates/hostel/index.html
@@ -21,7 +21,7 @@
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom">
-  <h1><b>Services</b></h1>
+  <h1><b>Services of the Hostel</b></h1>
   <p><b> Spacious Hostel Rooms</b></p>
   <p><b> with Comfortable and Hygienic Environment</b></p>
   
